# Assignment_3_Agentic-Turing-Machine-Development_-CLI-

./: .coverage  .dockerignore  .gitignore  3_AGENTS_SIMPLE_GUIDE.md  AGENT_EXECUTION_TUTORIAL.md  API_COMPARISON.md  CAPTURE_CICD_SCREENSHOTS.md  CI_CD_SETUP.md  CLAUDE_SKILLS_INSTALL.md  CLI_EXECUTION_EXAMPLES.md  COVERAGE_ACHIEVEMENT_SUMMARY.md  DELIVERABLES.md  Dockerfile  EXECUTION_GUIDE.md  FIXES_SUMMARY.md  GEMINI_MODEL_FIX.md  GEMINI_QUICKSTART.md  GEMINI_SETUP_GUIDE.md  LICENSE  MIGRATION_SUMMARY.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_CLEAN.md  REORGANIZATION_COMPLETE.md  START_HERE.md  START_HERE_AGENTS.md  TRANSFORMATION_COMPLETE.md  WHATS_NEW_GEMINI.md  WHY_WE_DESERVE_100.md  WORKING_GEMINI_MODELS.md  agent1_skill.txt  agent2_skill.txt  agent3_skill.txt  analysis_results_local.json  analyze_results.py  analyze_results_gemini.py  analyze_results_local.py  coverage.xml  docker-compose.yml  (+10 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md  research_contribution.md
.github/workflows/: deploy.yml  docker.yml  pipeline.yml  release.yml  test-and-coverage.yml  validate-pr.yml
docs/: ACADEMIC_PAPER.md  CICD_CHANGES_SUMMARY.md  CICD_UPDATES_FOR_RESEARCH.md  COLLEAGUE_REQUIREMENTS_VERIFIED.md  DOCUMENTATION_INDEX.md  EXECUTIVE_SUMMARY.md  INNOVATION_USAGE_GUIDE.md  MATHEMATICAL_PROOFS.md  MIT_INNOVATION_SUMMARY.md  MIT_LEVEL_TRANSFORMATION_SUMMARY.md  MIT_LEVEL_UV_STANDARDS_COMPLETE.md  MIT_RESEARCH_IMPLEMENTATION_COMPLETE.md  PROJECT_ACHIEVEMENTS.md  PROJECT_STRUCTURE_ANALYSIS.md  REPLICATION_GUIDE.md  RESEARCH_COMPONENTS_SUMMARY.md  RESEARCH_METHODOLOGY.md  TECHNICAL_SPECIFICATION.md  UV_MIGRATION_COMPLETE.md  UV_SETUP_GUIDE.md
docs/community/: ADOPTER_GUIDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  REUSABLE_TEMPLATES.md  SECURITY.md
docs/mit_level/: ANSWER_MIT_PRD_LEVEL_EXISTS.md  FINAL_MIT_LEVEL_PRD_SUMMARY.md  MIT_LEVEL_DOCUMENTATION_SUMMARY.md  MIT_PRD_SECTION_11_SUMMARY.md
docs/prd/: PRD.md
docs/project_management/: CHANGELOG.md  CURRENT_STATUS.md  NEXT_SESSION.md  NEXT_SESSION_CHECKLIST.md  NEXT_SESSION_INSTRUCTIONS.md  SESSION_SUMMARY.md  STATUS.md  TESTS_TO_ADD.md  TESTS_TO_GET_100_VERIFIED.md
results/: adversarial_robustness.json  comparative_analysis.json  cost_analysis.json  information_theory_analysis.json  research_analysis_summary.json  self_healing_analysis.json  sensitivity_analysis.json  stochastic_resonance_analysis.json
scripts/experiment/: analyze_results.py  run_mit_innovations.py  run_pipeline.sh  run_research_analysis.py  run_with_skills.py
scripts/setup/: install_skills.sh  setup_uv.sh  uninstall_skills.sh
scripts/utilities/: create_agent.sh  run_dashboard.sh
src/: adversarial_robustness.py  analysis.py  comparative_analysis.py  cost_tracker.py  dashboard.py  errors.py  information_theory.py  logger.py  pipeline.py  self_healing_agent.py  sensitivity_analysis.py  stochastic_resonance.py
tests/: test_agent.py
tests/unit/: test_analysis_main.py  test_cli_and_errors.py  test_comparative_analysis.py  test_coverage_helpers.py  test_dashboard.py  test_innovations.py  (+4 more)
