[project]
name = "agentic-turing-machine"
version = "1.0.0"
description = "Multi-Agent Translation System with Semantic Drift Analysis"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Fouad Azem", email = "Fouad.Azem@gmail.com" },
    { name = "Tal Goldengorn", email = "T.goldengoren@gmail.com" }
]
keywords = [
    "multi-agent",
    "translation",
    "semantic-drift",
    "claude-ai",
    "llm",
    "nlp"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "anthropic>=0.18.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-asyncio>=0.21.0",
    "coverage>=7.3.0",
]
notebook = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "notebook>=7.0.0",
    "ipykernel>=6.25.0",
]
dashboard = [
    "streamlit>=1.28.0",
    "plotly>=5.18.0",
    "pandas>=2.0.0",
]
all = [
    "agentic-turing-machine[dev,notebook,dashboard]",
]

[project.scripts]
atm-run = "run_with_skills:main"
atm-analyze = "analyze_results_local:main"
atm-test-agent = "test_agent:main"

[project.urls]
Homepage = "https://github.com/talgoldengoren/Assignment_3_Agentic-Turing-Machine-Development_-CLI-"
Documentation = "https://github.com/talgoldengoren/Assignment_3_Agentic-Turing-Machine-Development_-CLI-/tree/main/docs"
Repository = "https://github.com/talgoldengoren/Assignment_3_Agentic-Turing-Machine-Development_-CLI-.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing --cov-report=html"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "tests/*",
    "*/__pycache__/*",
    "src/dashboard.py",  # Streamlit UI code - tested via manual/E2E testing
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
fail_under = 85
show_missing = true

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

